apps/reverse-proxy/template/gateway.yaml
# --- 2. La Gateway (Porte d'entrée Grafana) ---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: nginx-gateway
  namespace: nginx  #  Vérifie ton namespace !
spec:
  gatewayClassName: cilium
  listeners:
  # Port 80 (HTTP)
  - name: http
    protocol: HTTP
    port: 80
    allowedRoutes:
      namespaces:
        from: Same
  
  # Port 443 (HTTPS)
  - name: https
    protocol: HTTPS
    port: 443
    tls:
      mode: Terminate
      certificateRefs:
      - kind: Secret
        name: nginx-tls-secret # Créé par le Certificate ci-dessus
    allowedRoutes:
      namespaces:
        from: Same

---
# --- 3. La Route (Vers le Service Nginx) ---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: nginx-route
  namespace: nginx  #  Vérifie ton namespace !
spec:
  parentRefs:
  - name: nginx-gateway
  hostnames:
  - "pve.mirecloud.com"
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    #  IMPORTANT : Vérifie le nom exact de ton service Nginx !
    # Souvent "nginx", "nginx-service"
    - name: nginx
      port: 80 # Le service Nginx écoute généralement sur 80 (et redirige vers 3000)
